# sw1nn-pkg-repo

./: .gitignore  CHANGELOG.md  Cargo.toml  Justfile  LICENSE  README.md  TESTING.md  cog.toml  release.toml
assets/: _sw1nn-pkg-ctl  config.toml  nginx-repo.sw1nn.net.conf  sw1nn-pkg-repo.service
etc/: config.toml  sw1nn-pkg-repo.service
examples/: delete_package.sh  list_packages.sh  upload.py  upload.sh
packaging/arch/: .gitignore  PKGBUILD
src/: auth.rs  config.rs  db_actor.rs  error.rs  lib.rs  metrics.rs  upload.rs
src/api/: auth.rs  cleanup_policy.rs  delete_versions.rs  mod.rs  upload.rs
src/metadata/: generator.rs  mod.rs  parser.rs
src/models/: mod.rs  package.rs  pkginfo.rs
src/repo/: mod.rs
src/storage/: cleanup.rs  mod.rs
tests/: auth_tests.rs  chunked_upload_tests.rs  delete_versions_tests.rs  integration_tests.rs  range_tests.rs
tests/common/: mod.rs
