[package]
name = "sw1nn-pkg-repo"
version = "0.7.0"
edition = "2024"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }

# OpenAPI
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }
utoipa-axum = { version = "0.1" }
utoipa-rapidoc = { version = "5", features = ["axum"] }


# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Configuration
config = "0.14"
clap = { version = "4", features = ["derive"] }

# Error handling
derive_more = { version = "1", features = ["full"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
md5 = "0.7"
byte-unit = { version = "5", features = ["serde"] }

# HTTP client (for pkg-upload binary)
reqwest = { version = "0.12", features = ["multipart", "json"] }

# Terminal colors
colored = "2"

# Archive handling
tar = "0.4"
flate2 = "1.0"
zstd = "0.13"

[dev-dependencies]
tempfile = "3"
