[package]
name = "sw1nn-pkg-repo"
version = "2.7.1"
edition = "2024"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["fs", "trace", "cors"] }

# OpenAPI
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }
utoipa-axum = { version = "0.2" }
utoipa-rapidoc = { version = "6", features = ["axum"] }


# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Configuration
config = "0.15"
clap = { version = "4", features = ["derive"] }

# Error handling
derive_more = { version = "2.1", features = ["full"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-journald = "0.3"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
md5 = "0.8"
byte-unit = { version = "5", features = ["serde"] }
alpm-types = "0.11"
semver = "1.0"
glob = "0.3"

# HTTP client (for pkg-upload binary)
reqwest = { version = "0.13", features = ["multipart", "json", "form"] }

# Metrics
metrics = "0.24"
metrics-exporter-prometheus = "0.18"

# Terminal colors
colored = "3.1"
indicatif = "0.18"

# Authentication
jsonwebtoken = "10.3"
dirs = "6"

# Archive handling
tar = "0.4"
flate2 = "1.0"
zstd = "0.13"

[dev-dependencies]
tempfile = "3"
